--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   video_thumbnail: ^0.5.3
   shared_preferences: ^2.2.2
   url_launcher: ^6.2.2
+  path: ^1.8.3
+  flutter_native_api: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
